# lab03

./: CMakeLists.txt  REPORT.md
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
extended_lib/include/: extra.hpp
formatter_ex_lib/: CMakeLists.txt  ex.cpp  ex.hpp
formatter_ex_lib/sources/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/include/: formatter.hpp
formatter_lib/sources/: formatter.cpp
hello_world_application/: CMakeLists.txt  hello_world.cpp  run.cc
solver_application/: CMakeLists.txt  app.cc  solver.cpp
solver_lib/: CMakeLists.txt  lib.cpp  lib.hpp
solver_lib/include/: solver.h
solver_lib/sources/: solver.cpp
